--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^4.8.0",
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-elements": "^0.18.5",
     "react-native-maps": "^0.18.3",
     "react-navigation": "^1.0.0-beta.21"
   }
