--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^4.8.0",
     "massive": "^4.4.0",
     "react": "16.0.0",
+    "react-key-index": "^0.1.1",
     "react-native": "0.50.3",
     "react-native-elements": "^0.18.5",
     "react-native-maps": "^0.18.3",
